[metadata]
name = bledom
version = 0.1.0
author = Raresh Nistor
author_email = raresh@nistor.email
description = Python library for controlling BLEDOM devices 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thegreatrazz/pybledom
project_urls =
    Bug Tracker = https://github.com/thegreatrazz/pybledom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bleak >= 0.11.0

[options.packages.find]
where = src